# chip-8-emulator

./: .gitignore  Cargo.toml  README.md
programs/: hello-world.ch8
src/: lib.rs  main.rs
src/chip/: chip8.rs  mod.rs
src/chip/chip8/: constants.rs  cursive_display.rs  macros.rs  mod.rs  opcodes.rs  tests.rs  util.rs
src/chip/chip8/opcodes/: arithmetic_and_logic.rs  instructions.rs  macros.rs  mod.rs  program_flow.rs  system.rs
