[package]
name = "chip-8-emulator"
version = "0.1.0"
authors = ["David Derler <david@derler.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand="0.7.3"
crossbeam-channel="0.4.4"
cursive = { git = "https://github.com/gyscos/cursive" }